// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> matches snapshot with \`inline\` = true 1`] = `
<div>
  <div
    class="css-1uti2s-checkboxContainer-checkboxContainer"
  >
    <input
      aria-label="Test label"
      id="testId"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      data-testid="checkbox-label-testId"
      for="testId"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> matches snapshot with \`lg\` size 1`] = `
<div>
  <div
    class="css-az5b0r-checkboxContainer-checkboxContainer"
  >
    <input
      aria-label="Test label"
      id="testId"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      data-testid="checkbox-label-testId"
      for="testId"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> matches snapshot with \`md\` size 1`] = `
<div>
  <div
    class="container-class css-1piv5oz-checkboxContainer-checkboxContainer"
    id="my-container-id"
  >
    <input
      aria-label="Test label"
      class="checkbox"
      id="my-id"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      data-testid="checkbox-label-my-id"
      for="my-id"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;
